# pyMercator

./: .gitignore  PR_SUMMARY.md  README.md  RELATORIO_ANALISE_SISTEMA_PYMERCATOR.txt  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
config/: borrow_policy.json  execution_policy.json  features.json  features_catalog.json  indices_catalog.json  market_context.json  market_context_auto.json  market_context_thresholds.json  observation.json  policy.json  position_actions.json  prediction.json  pymercator_presets.json  runtime.json  short_policy.json  short_thresholds.json
docs/: COMMANDS.md  EXPERIMENTAL_SEQUENCE_MODELS.md  OPERATING.md  SYSTEM_REPORT.md
scripts/: daily_review.ps1  daily_signal.ps1  dump_cli_help.ps1  ops_common.ps1  review.ps1  run_absolute_tests.ps1  run_daily_profiles.ps1  run_daily_review.ps1  run_daily_signal.ps1  run_daily_train.ps1  run_weekend_full.ps1  signal.ps1  train.ps1  weekend.ps1  weekly_train.ps1
storage/: daily_active_report.json
tests/: test_audit_system.py  test_basket_daily.py  test_cli_audit.py  test_cli_cfg.py  test_cli_confirm.py  test_cli_context.py  test_cli_context_auto.py  test_cli_context_engine.py  test_cli_context_presets.py  test_cli_daily_auto.py  test_cli_daily_real.py  test_cli_db.py  test_cli_diag.py  test_cli_execution_policy.py  test_cli_features_catalog.py  test_cli_features_matrix.py  test_cli_indices.py  test_cli_indices_prices.py  test_cli_json_output.py  test_cli_legacy.py  test_cli_legacy_classify.py  test_cli_legacy_migrate_universe.py  test_cli_observe.py  (+79 more)
(+570 files in other folders)
