[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pymercator"
version = "0.1.0"
description = "Operational market permission system: regime, universe health, ranking, validation, permission and human confirmation."
requires-python = ">=3.10"
authors = [
  { name = "Jose Paulo Pereira Lima" }
]
dependencies = [
  "pandas",
  "yfinance",
  "PyYAML"
]

[project.scripts]
mercator = "pymercator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []